welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	var M = maxValue(num);
	var compteur = 0
	for (i<- M to 0) {
		compteur=compteur + seqInArray(num,i)
		for (j<-0 to num.length) {
			if (num(j)==i) {
				num(j)=num(j)-1
			}
		}
	}
}
def maxValue(nums:Array[Int]): Int = {
	var max = nums(0)
	for (i<- 1 to nums.length-1) {
		if (nums(i)>max) {
			max=nums(i)
		}
	}
	return max
}
def seqInArray(T:Array[Int],n:Int): Int ={
	var cpt = 0
	for (i<- 0 to T.length-1) {
		if ((T(i)==n) && (T(i-1)!=n)) {
			cpt = cpt +1
		}
	}
	return cpt
}
